# drum_synth

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bundler.toml
context/: snare_synthesis_followup_transcript.md  snare_synthesis_transcript.md
src/: lib.rs  main.rs  ui.rs
