[package]
name = "drum_synth"
version = "0.1.0"
edition = "2021"
authors = ["r-cha <info@archasolutions.com>"]
license = "GPL-3.0-or-later"
homepage = "https://plugins.r-cha.dev"
description = "Realistic synthetic drums"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.4"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone"
] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Needed for the custom knobs and styling
vizia = { version = "0.2.0", git = "https://github.com/vizia/vizia" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
